# InstaDam

./: .gitignore  .travis.yml  layout.ui  readme.md
Qt/InstaDam/: CMakeLists.txt  INSTALL  InstaDam.pro  build_dist.csh  compile_commands.json  filtercontrols.cpp  filtercontrols.h  filterproperty.cpp  filterproperty.h  fslider.cpp  fslider.h  index.qdoc  instadam.cpp  instadam.h  instadam.qdocconf  instadam.ui  instadam_temp.ui  labelbutton.cpp  labelbutton.h  main.cpp  maskobjects.h  maskviewer.cpp  maskviewer.h  moduleheader.h  newproject.cpp  paintbrush.cpp  photoviewer.cpp  photoviewer.cpp.autosave  photoviewer.h  photoviewer.h.autosave  picpushbutton.cpp  picpushbutton.h  pixmapops.cpp  pixmapops.h  popuptestwindow_copy.cpp  project.cpp  project.h  qdoc.sh  qtwasm.patch
Qt/InstaDam/Selector/: CMakeLists.txt  Selector.pro  SelectorStandAlone.pro  annotation.cpp  annotation.h  blankFrame.ui  boxbasedselector.cpp  boxbasedselector.h  commands.cpp  commands.h  ellipseSelect.cpp  ellipseSelect.h  freeDrawErase.cpp  freeDrawErase.h  freeDrawSelect.cpp  freeDrawSelect.h  freeSelect.ui  jsonConstants.h  label.cpp  label.h  main.cpp  mainwindow.cpp  mainwindow.h  mirrors.qdoc  moduleheader.h  photoScene.cpp  photoScene.h  polygonSelect.cpp  polygonSelect.h  polygonSelect.ui  rectangleSelect.cpp  rectangleSelect.h  select.qdoc  selectItem.cpp  selectItem.h  selectgroup.cpp  selectgroup.h  selector.qdocconf  ui_addusertoproject.h  ui_blankFrame.h  (+4 more)
Qt/InstaDam/Selector/Test/: SelectorTest  SelectorTest.pro  runCoverage.sh  testEllipseSelect.cpp  testEllipseSelect.h  testRectangleSelect.cpp  testSelect.h  testfree.cpp
Qt/InstaDam/Selector/doc/: addcommand-members.html  addcommand.html  addvertexcommand-members.html  addvertexcommand.html  boxbasedselector-members.html  boxbasedselector-obsolete.html  boxbasedselector.html  deletecommand-members.html  deletecommand.html  deletevertexcommand-members.html  deletevertexcommand.html  ellipseselect-members.html  ellipseselect-obsolete.html  ellipseselect.html  erasepointscommand-members.html  erasepointscommand.html  freedrawerase-members.html  freedrawerase-obsolete.html  freedrawerase.html  freedrawselect-members.html  freedrawselect-obsolete.html  freedrawselect.html  label-members.html  label.html  mirroritems.html  movecommand-members.html  movecommand.html  movevertexcommand-members.html  movevertexcommand.html  photoscene-members.html  photoscene-obsolete.html  photoscene.html  polygonselect-members.html  polygonselect-obsolete.html  polygonselect.html  rectangleselect-members.html  rectangleselect-obsolete.html  rectangleselect.html  rotatecommand-members.html  rotatecommand.html  (+5 more)
Qt/InstaDam/Test/: InstaDamTest  InstaDamTest.pro  IntegrationTest.pro  Selector  htmlFileHandler  libquazip.prl  quazip  runCoverage.sh  runIntegration.sh
Qt/InstaDam/Test/SelectorTest/: SelectorTest.pro  blankFrame.ui  boxbasedselector.cpp  boxbasedselector.h  commands.cpp  commands.h  ellipseSelect.cpp  ellipseSelect.h  freeDrawErase.cpp  freeDrawErase.h  freeDrawSelect.cpp  freeDrawSelect.h  freeSelect.ui  label.cpp  label.h  photoScene.cpp  photoScene.h  polygonSelect.cpp  polygonSelect.h  polygonSelect.ui  rectangleSelect.cpp  rectangleSelect.h  selectItem.cpp  selectItem.h  testEllipseSelect.cpp  testRectangleSelect.cpp  testSelect.h  testcommands.cpp  testfree.cpp  testpolygonselect.cpp  ui_blankFrame.h  ui_projectlist.h  ui_serverprojectname.h
Qt/InstaDam/Test/app/: app  app.pro  integrationtest.cpp  testCommands.cpp  testEllipseSelect.cpp  testFilterProperty.cpp  testFilters.cpp  testFreeDrawSelect.cpp  testLabel.cpp  testPhotoScene.cpp  testPolygonSelect.cpp  testRectangleSelect.cpp  testSelect.h  testapp.h  testlabelbutton.cpp  testproject.cpp
Qt/InstaDam/Test/appTest/: addusertoproject.cpp  addusertoproject.h  addusertoproject.ui  appTest.pro  colordialog.cpp  colordialog.h  enumconstants.cpp  enumconstants.h  filtercontrols.cpp  filtercontrols.h  filterproperty.cpp  filterproperty.h  fslider.cpp  fslider.h  imagelist.cpp  imagelist.h  imagelist.ui  instadam.cpp  instadam.h  instadam.ui  instadam_temp.ui  labelButton.cpp  labelButton.h  login.cpp  (+40 more)
Qt/InstaDam/app/: CMakeLists.txt  Makefile.Debug  Makefile.Release  Selector.pro  addusertoproject.cpp  addusertoproject.h  addusertoproject.ui  app.pro  blankFrame.ui  boxbasedselector.cpp  boxbasedselector.h  chooselabeldialog.cpp  chooselabeldialog.h  colordialog.cpp  colordialog.h  commands.cpp  commands.h  debuginsta.cpp  debuginsta.h  debuginsta.ui  ellipseSelect.cpp  ellipseSelect.h  enumconstants.cpp  enumconstants.h  filtercontrols.cpp  filtercontrols.h  filterproperty.cpp  filterproperty.h  filters.cpp  filters.h  freeDrawErase.cpp  freeDrawErase.h  freeDrawSelect.cpp  freeDrawSelect.h  freeSelect.ui  freedrawstack.cpp  freedrawstack.h  fslider.cpp  fslider.h  imagelist.cpp  (+68 more)
Qt/InstaDam/doc/: FilesOverview.docx  addcommand-members.html  addcommand.html  addusertoproject-members.html  addusertoproject-obsolete.html  addusertoproject.html  addvertexcommand-members.html  addvertexcommand.html  boxbasedselector-members.html  boxbasedselector-obsolete.html  boxbasedselector.html  chooselabeldialog-members.html  chooselabeldialog-obsolete.html  chooselabeldialog.html  classes.html  colordialog-members.html  colordialog-obsolete.html  colordialog.html  deletecommand-members.html  deletecommand.html  deletevertexcommand-members.html  deletevertexcommand.html  editlabelcommand-members.html  editlabelcommand.html  ellipseselect-members.html  ellipseselect-obsolete.html  ellipseselect.html  erasepointscommand-members.html  erasepointscommand.html  fcheckbox-members.html  fcheckbox-obsolete.html  fcheckbox.html  filtercontrols-members.html  filtercontrols-obsolete.html  filtercontrols.html  filterdialog-members.html  filterdialog-obsolete.html  filterdialog.html  filterpropertiesmeta-members.html  filterpropertiesmeta.html  (+83 more)
Qt/InstaDam/htmlFileHandler/: htmlFileHandler.pro  qhtml5file.cpp  qhtml5file.h
Qt/InstaDam/quazip/: CMakeLists.txt  Makefile.Debug  quazip.prl  quazip.pro  quazipd.prl
(+407 files in other folders)
